<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/ic_location" />

                <!-- Location field -->
                <EditText
                    android:id="@+id/edit_race_location"
                    android:hint="@string/hint_race_location"
                    android:inputType="textCapWords"
                    android:padding="16dp"
                    style="@style/EditorFieldStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/ic_date"/>
                <!-- Date field -->
                <EditText
                    android:id="@+id/edit_race_date"
                    android:hint="@string/hint_race_date"
                    android:inputType="textCapWords"
                    android:clickable="true"
                    android:focusable="false"
                    android:padding="16dp"
                    style="@style/EditorFieldStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/ic_duration"/>
                <!-- Duration field -->
                <EditText
                    android:id="@+id/edit_race_duration"
                    android:hint="@string/hint_race_duration"
                    android:inputType="textCapWords"
                    android:padding="16dp"
                    style="@style/EditorFieldStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/ic_distance"/>
                <!-- Distance field -->
                <EditText
                    android:id="@+id/edit_race_distance"
                    android:hint="@string/hint_race_distance"
                    android:inputType="textCapWords"
                    android:padding="16dp"
                    style="@style/EditorFieldStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/ic_elevation"/>
                <!-- Elevation field -->
                <EditText
                    android:id="@+id/edit_race_elevation"
                    android:hint="@string/hint_race_elevation"
                    android:inputType="textCapWords"
                    android:padding="16dp"
                    style="@style/EditorFieldStyle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>